--- a/config/android/library.gradle
+++ b/config/android/library.gradle
@@ -15,6 +15,7 @@
  */
 
 apply plugin: 'com.android.library'
+apply plugin: 'me.tatarka.retrolambda'
 
 apply from: "$rootDir/config/documentation/javadoc_android_library.gradle"
 apply from: "$projectDir/config/coverage/jacoco.gradle"
