--- a/settings.gradle
+++ b/settings.gradle
@@ -17,7 +17,9 @@
 rootProject.name = "business-search"
 
 include ':presentation-java'
-include ':presentation-java-noui'
+include ':presentation-java-mvp'
+include ':presentation-java-mvvm'
+include ':presentation-java-nogui-mvp'
 include ':presentation-java-swing-mvp'
 include ':presentation-android'
 include ':presentation-android-mvp'
