--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,13 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
+org.gradle.jvmargs=-Xmx6g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+# Request a long standing daemon to run so that subsequent gradle commands run faster.
+org.gradle.daemon=true
+
+# This project has several modules that can be built in parallel for build speed improvement.
+org.gradle.parallel=true
+
+# Likewise, configure only projects that are relevant for the requested tasks.
+org.gradle.configureondemand=true
