--- a/presentation-java-mvvm/build.gradle
+++ b/presentation-java-mvvm/build.gradle
@@ -21,12 +21,15 @@ dependencies {
     def presentationJavaTestDependencies = rootProject.ext.presentationJavaTestDependencies
 
     apt presentationJavaDependencies.daggerCompiler
+    apt presentationJavaDependencies.autoValue
 
     api project(':presentation-java')
 
     implementation presentationJavaDependencies.rxJava
-    implementation presentationJavaDependencies.javaxInject
     implementation presentationJavaDependencies.dagger
+
+    compileOnly presentationJavaDependencies.javaxAnnotation
+    compileOnly presentationJavaDependencies.autoValue
 
     testImplementation presentationJavaTestDependencies.junit
     testImplementation presentationJavaTestDependencies.assertj
