Added note about gradle daemon parallelization

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,7 @@ org.gradle.jvmargs=-Xmx6g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.daemon=true
 
 # This project has several modules that can be built in parallel for build speed improvement.
+# Note that this may result in parallel build failure due to file locks.
 org.gradle.parallel=true
 
 # Likewise, configure only projects that are relevant for the requested tasks.
