Configured project test source sharing, opting into mockin finals with mockito2, and add tests for BusinessListPresenterTest

--- a/presentation-android/build.gradle
+++ b/presentation-android/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     provided presentationAndroidDependencies.javaxAnnotation
     provided presentationAndroidDependencies.autoValue
 
+    testCompile project(path: ':presentation-java', configuration: 'testOutput')
     testCompile presentationAndroidTestDependencies.junit
     testCompile presentationAndroidTestDependencies.assertj
     testCompile presentationAndroidTestDependencies.mockitoCore
