--- a/config/java/library.gradle
+++ b/config/java/library.gradle
@@ -21,6 +21,7 @@ apply plugin: "net.ltgt.apt"
 apply from: "$projectDir/config/coverage/jacoco.gradle"
 apply from: "$rootDir/config/documentation/javadoc_java_main.gradle"
 apply from: "$rootDir/config/quality/quality_java_main.gradle"
+apply from: "$rootDir/config/testing/share_tests_java_library.gradle"
 
 /*
  * FIXME (LAMBDA) - Set to 1.8 in order to use lambdas in all Java library modules
