--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,22 @@
-# Windows thumbnail db
-Thumbs.db
+# Generated files (class, dex, apk, etc)
+**/build/
 
-# OSX files
-.DS_Store
-
-# built application files
-*.apk
-
-# files for the dex VM
-*.dex
-  
-# Java class files
-*.class
-  
-# generated files
-bin/
-gen/
-build/
-  
 # Local configuration file (sdk path, etc)
-local.properties
-  
-# Eclipse project files
-.classpath
-.project
-  
-# Android Studio
-.idea
-.gradle
-/*/local.properties
-/*/out
-/*/*/build
-/*/*/production
-*.iml
-*.iws
-*.ipr
-*~
-*.swp
+**/local.properties
 
 # Retrofit/OkHttp cache
 journal
 *.0
 *.1
+
+# Android Studio / IntelliJ
+*.idea/
+*.gradle/
+*.iml
+*~
+
+# Windows thumbnail db
+Thumbs.db
+
+# OSX files
+.DS_Store
