--- a/presentation-android-mvp/build.gradle
+++ b/presentation-android-mvp/build.gradle
@@ -25,5 +25,11 @@ android {
 }
 
 dependencies {
+    def presentationAndroidDebugDependencies = rootProject.ext.presentationAndroidDebugDependencies
+
     compile project(':presentation-android')
+
+    // FIXME (GRADLE) - Move to presentation-android dependencies once library projects support
+    // publishing all library variants (not just release). See config/android/library.gradle
+    debugCompile presentationAndroidDebugDependencies.leakCanary
 }
