Fixed checkstyle violations

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ org.gradle.jvmargs=-Xmx6g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.daemon=true
 
 # This project has several modules that can be built in parallel for build speed improvement.
-# FIXME? (GRADLE BUILD) - Setting parallel to true may result in parallel build failure due to concurrent
+# FIXME (GRADLE BUILD) - Setting parallel to true may result in parallel build failure due to concurrent
 # file access resulting in file deadlocks.
 org.gradle.parallel=true
 
