--- a/presentation-android-mvp/src/main/AndroidManifest.xml
+++ b/presentation-android-mvp/src/main/AndroidManifest.xml
@@ -22,5 +22,13 @@
         android:name=".AndroidApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" />
+        android:theme="@style/AppTheme">
+
+        <activity android:name=".ui.business.list.view.BusinessListActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 </manifest>
