--- a/config/android/library.gradle
+++ b/config/android/library.gradle
@@ -24,6 +24,9 @@ apply from: "$rootDir/config/quality/quality_android_library.gradle"
 android {
     // FIXME (GRADLE LIBRARY) - Enable when publishing all library variants (not just release) is finally supported
     // See http://tools.android.com/tech-docs/new-build-system/user-guide#TOC-Referencing-a-Library
+    // See https://issuetracker.google.com/issues/37034891
+    // Seems like this will be supported in Android gradle plugin 2.5
+    // See http://tools.android.com/tech-docs/new-build-system/2-5-alpha-gradle-plugin/trying-gradle-plugin-2-5#TOC-Variant-Aware-Dependency-Management
     // publishNonDefault true
 
     compileSdkVersion rootProject.ext.androidCompileSdkVersion
