Minor cleanup for buildscript dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,12 @@
  */
 
 buildscript {
+    ext {
+        androidGradleBuildToolsVersion = '2.3.1'
+        javaAptPluginVersion = '0.10'
+        retrolambdaPluginVersion = '3.6.0'
+    }
+
     repositories {
         jcenter()
         mavenCentral()
@@ -28,23 +34,22 @@ buildscript {
         // Note that annotation processors (apt) are now included in the Android gradle plugin
         // starting with v2.2 (usage is annotationProcessor). This deprecates the custom android-apt
         // annotation processor: https://bitbucket.org/hvisser/android-apt/wiki/Migration
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath "com.android.tools.build:gradle:$androidGradleBuildToolsVersion"
 
         // Apt for Java: https://plugins.gradle.org/plugin/net.ltgt.apt
-        classpath "net.ltgt.gradle:gradle-apt-plugin:0.10"
+        classpath "net.ltgt.gradle:gradle-apt-plugin:$javaAptPluginVersion"
 
         // FIXME (LAMBDA) - Migrate to using Android Studio 2.4 support for lambdas
         // (and other Java 8 features)
         // This will require classpath com.android.tools.build:gradle: to 2.4.x
         // See https://developer.android.com/studio/preview/features/java8-support.html
-        classpath 'me.tatarka:gradle-retrolambda:3.6.0'
+        classpath "me.tatarka:gradle-retrolambda:$retrolambdaPluginVersion"
     }
 }
 
-apply from: "$rootDir/config/dependencies/dependencies.gradle"
+apply from: "$rootDir/config/dependencies/dependencies_all_projects.gradle"
 
 // Include cleaning the root build/ dir
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
-
