--- a/config/dependencies/dependencies_all_projects.gradle
+++ b/config/dependencies/dependencies_all_projects.gradle
@@ -15,7 +15,7 @@
  */
 
 /**
- * Define all dependencies for all modules
+ * Define all dependencies for all projects and the repositories in which to retrieve them.
  */
 
 allprojects {
